feat: add cancel subscription use case
